Signed-off-by: laomanong <laomanong@qq.com>

--- a/host.conf
+++ b/host.conf
@@ -5,26 +5,30 @@ server    {
     listen 80;
     server_name pic.mall.com;
     #host入口
-    root /mnt/hgfs/dabai/dbmall/dbMall/public/upload;
+    root /home/app/public/upload;
 
+    location ~ [^/]\.php(/|$)    {
+        #host入口
+        root /home/app/public/upload;
+        include /home/app/common/nginx/fastcgi.conf;
+        fastcgi_pass  unix:/tmp/php-cgi.sock;
+    }
+
+    location / {
+        if (!-e $request_filename) {
+           rewrite ^/(.+)$ /index.php/$1 last;
+        }
+    }
+
+    #图片规则必须放最后
     location ~* .*\.(gif|jpg|jpeg|png|bmp)$  {
         #文件实际保存位置
-        root /mnt/hgfs/dabai/dbmall/dbMall/upload;
+        root /home/app/upload;
         if (-e $request_filename) {
             add_header Resource static;
             add_header Access-Control-Allow-Origin *;
             expires    max;
         }
-    }
-
-    location ~ [^/]\.php(/|$)    {
-        #host入口
-        root /mnt/hgfs/dabai/dbmall/dbMall/public/upload;
-        include /mnt/hgfs/dabai/dbmall/dbMall/common/nginx/fastcgi.conf;
-        fastcgi_pass  unix:/tmp/php-cgi.sock;
-    }
-
-    location / {
         if (!-e $request_filename) {
            rewrite ^/(.+)$ /index.php/$1 last;
         }
