Signed-off-by: ddd <ddd@qqq.com>

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "ext-curl": "*",
     "ext-openssl": "*",
     "ext-mbstring": "*",
-    "ext-zlib": "*"
+    "ext-zlib": "*",
+    "ext-redis": "*"
   },
   "autoload": {
     "psr-4": {
